--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,5 +16,5 @@ sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
 
 
 
-sonar.coverage.exclusions=src/index.tsx, src/types.ts src/server/index.ts src/loadEnvironment.ts src/database/connectToDatabase.ts
+sonar.coverage.exclusions=src/index.tsx, src/database/connectToDatabase.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
